test/fixtures/public/fail/semantic/arr_size_not_int.jmm
/*  REASON:
    Array sizes must be integer.
*/

class T {
    public static void main(String[] a) { 
        int[] b;
        b = new int[true];
    }
}
